# mupsi

./: .gitignore  CMakeLists.txt  flake.nix
src/: main.cpp
src/geometry/: material.cpp  material.h  object.cpp  object.h  object.hpp  ray.h  scene.cpp  scene.h  scene.hpp
src/gp/: gp_eval.cpp  gp_eval.h  gpnoise.cpp  gpnoise.h  kernel.h
src/io/: config.cpp  config.h
src/math/: random.h
src/rendering/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  renderer.cpp  renderer.h  trace.cpp  trace.h
